# rust_musicplayer

./: Cargo.toml
src/: files.rs  gui.rs  main.rs  saves.rs  sound.rs
