[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
egui = "0.20.1"
lofty = "0.10.0"
rand = "0.8.5"
rodio = "0.16.0"

[target.'cfg(windows)'.dependencies]
rfd = "0.10.0"

[target.'cfg(unix)'.dependencies]
rfd = {version= "0.10.0", default-features= false, features= ["xdg-portal"]}

